# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .install-password-manager.sh  README.md  dot_zshenv
.chezmoidata/: packages.yaml
.chezmoiscripts/: run_after_onchange_install-homebrew-packages.sh.tmpl  run_after_sync_macos_settings.fish.tmpl  run_once_after_change_remote_to_ssh.fish.tmpl  run_once_after_configure_system.fish.tmpl  run_once_after_configure_system.sh.tmpl  run_once_after_rebuild_ghidra_natives.fish  run_once_after_setup_macos.fish.tmpl  run_once_before_install-packages-darwin.sh.tmpl  run_onchange_after_install-fisher-packages.sh.tmpl  run_onchange_after_install-fisher-plugins.sh.tmpl  run_onchange_after_install-mise-tools.fish.tmpl  run_onchange_after_install-mise-tools.sh.tmpl  run_onchange_darwin-install-packages.sh.tmpl  run_onchange_install-homebrew-packages.sh.tmpl
.github/scripts/: lint-packages.sh
.github/workflows/: validate.yml
dot_config/git/: allowed_signers  config
dot_config/python/: pythonrc
dot_config/zsh/: dot_zshrc
private_Library/private_LaunchAgents/: com.local.KeyRemapping.plist
private_dot_config/: starship.toml
private_dot_config/chezmoi/: chezmoi.toml
private_dot_config/ghostty/: config  config.tmpl
private_dot_config/git/: allowed_signers.tmpl  config.tmpl  ignore
private_dot_config/homebrew/: Brewfile.tmpl  brew.env  brew.env.tmpl
private_dot_config/kitty/: kitty.conf
private_dot_ssh/: config  id_ed25519.pub  id_ed25519.pub.tmpl  private_id_ed25519.tmpl
security/: pyproject.toml
(+22 files in other folders)
