[project]
name = "security"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pwntools>=4.14.0",
    "pycryptodome>=3.21.0",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "sympy>=1.13.3",
    "tqdm>=4.67.1",
    "websockets>=14.2",
    "z3-solver>=4.13.4.0",
]
