[project]
name = "security"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pwntools>=4.14.0",
    "pycryptodome>=3.21.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
    "z3-solver>=4.14.1.0",
]
